<resources>
    <string name="app_name">大スケ</string>
    <string name="login">"ログイン"</string>
    <string name="login_id">"ログインID"</string>
    <string name="password">"パスワード"</string>
    <string name="register">"新規登録"</string>
    <string name="reply">"ログインしました"</string>
    <string name="logout">"ログアウト"</string>
    <string name="rep">"ログアウトしました"</string>
    <string name="adress">"メールアドレス"</string>
    <string name="password_confirmation">"パスワード再入力"</string>
    <string name="registration">"登録"</string>
    <string name="chenge_password">"パスワード変更を行う"</string>
    <string name="send_email">"変更メール送信"</string>
    <string name="zikanwari">"時間割"</string>
    <string name="kougitouroku">"講義登録"</string>
    <string name="userinfo">"ユーザ情報"</string>
    <string name="lectureinformation">"講義情報"</string>
    <string name="bulletin">"掲示板"</string>
    <string name="note">"ノート"</string>
    <string name="file">ファイル</string>
    <string name="upload">アップロード</string>
    <string name="image_upload">画像アップロード</string>
    <string name="delete">削除</string>
    <string name="reload">更新</string>
    <string name="memo">メモ</string>
    <string name="img_title">タイトル画面</string>
    <string name="url">シラバスへ</string>
    <string name="description">picture</string>
    <string name="ImageView">picture</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_submenu">SubmenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">大スケ</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
