<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListActivity">

    <TextView
        android:id="@+id/classname_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/classname_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="250dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/memo"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginStart="10dp"
                android:hint="@string/memo"
                android:autofillHints="@string/memo"
             />
        </ScrollView>
        <Button
            android:id="@+id/upload"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/upload"
            android:background="@drawable/button"
            android:textColor="@color/textColor"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/memo_dl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
        />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/upload_image"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/image_upload"
            android:background="@drawable/button"
            android:textColor="@color/textColor"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            />

        <Button
            android:id="@+id/reload"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/reload"
            android:background="@drawable/button"
            android:textColor="@color/textColor"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            />

    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:horizontalSpacing="1dp"
        android:verticalSpacing="1dp"
        android:numColumns="2"
        android:stretchMode="columnWidth" />


</LinearLayout>