<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_userinfo_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".UserinfoActivity">

            <TextView
                android:id="@+id/mail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="30sp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:text="@string/adress" />

            <TextView
                android:id="@+id/user_mail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingStart="30dp"
                android:paddingEnd="10dp"
                android:textSize="30sp"
                android:textColor="#262626"
                android:background="#fafafa"
                />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:text="@string/chenge_password" />

            <Button
                android:id="@+id/password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_state"
                android:layout_gravity="center_vertical"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:text="@string/send_email"/>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_userinfo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_submenu"
        app:menu="@menu/activity_submenu_drawer" />

</android.support.v4.widget.DrawerLayout>
