<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_lecinfo_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LecInfoActivity">

            <TextView
                android:id="@+id/name"
                android:layout_width="101dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="14dp"
                app:layout_constraintBottom_toTopOf="@+id/lecinfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                 />

            <Button
                android:id="@+id/lecinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="125dp"
                android:layout_marginBottom="137dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="spread_inside"
                android:text="@string/lectureinformation" />

            <Button
                android:id="@+id/bbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="14dp"
                app:layout_constraintEnd_toStartOf="@+id/note"
                app:layout_constraintStart_toEndOf="@+id/lecinfo"
                app:layout_constraintTop_toBottomOf="@+id/name"
                android:text="@string/bulletin" />

            <Button
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginEnd="42dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/bbs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bbs"
                android:text="@string/note" />

            <TextView
                android:id="@+id/time"
                android:layout_width="140dp"
                android:layout_height="70dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lecinfo"
                tools:text="時限" />

            <TextView
                android:id="@+id/evaluation"
                android:layout_width="265dp"
                android:layout_height="81dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="44dp"
                app:layout_constraintEnd_toStartOf="@+id/teacher"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time"
                tools:text="評価" />

            <TextView
                android:id="@+id/teacher"
                android:layout_width="142dp"
                android:layout_height="75dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toEndOf="@+id/time"
                app:layout_constraintTop_toTopOf="@+id/time"
                tools:text="講師" />

            <Button
                android:id="@+id/URL"
                android:layout_width="200dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/evaluation"
                android:text="@string/url"
                android:background="@drawable/button"
                android:textColor="@color/textColor"
                android:textSize="20sp"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_lecinfo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_submenu"
        app:menu="@menu/activity_submenu_drawer" />

</android.support.v4.widget.DrawerLayout>